## Process this file with automake to produce Makefile.in

## Created by Anjuta

uidir = @UIDATADIR@
ui_DATA = \
	000.gif \
	001.gif \
	002.gif \
	003.gif \
	004.gif \
	0_60x60.png \
	0.png \
	1_60x60.png \
	1.png \
	2_60x60.png \
	2.png \
	3_60x60.png \
	3.png \
	4_60x60.png \
	4.png \
	5_60x60.png \
	5.png \
	activation-consolidation-helpfr_BE.gif \
	activation-consolidation-helpfr_BE.pdf \
	activation-consolidation-helpfr_FR.gif \
	activation-consolidation-helpfr_FR.pdf \
	activation-consolidation-helpfr.gif \
	activation-consolidation-helpfr.pdf \
	activation-consolidation-help.gif \
	activation-consolidation-helpnl_BE.gif \
	activation-consolidation-helpnl_BE.pdf \
	activation-consolidation-helpnl.gif \
	activation-consolidation-helpnl_NL.gif \
	activation-consolidation-helpnl_NL.pdf \
	activation-consolidation-helpnl.pdf \
	activation-consolidation-help.pdf \
	alarm-box-diagnosis-help.gif \
	alarm-box-diagnosis-help.pdf \
	alarmbox-diagnostic.glade \
	alarmButton.jpg \
	all-diagnosis-help.gif \
	all-diagnosis-help.pdf \
	all-diagnostics-result.glade \
	assisted-card-activator.glade \
	assisted-card-generator-helpfr_BE.gif \
	assisted-card-generator-helpfr_BE.pdf \
	assisted-card-generator-helpfr_FR.gif \
	assisted-card-generator-helpfr_FR.pdf \
	assisted-card-generator-helpfr.gif \
	assisted-card-generator-helpfr.pdf \
	assisted-card-generator-help.gif \
	assisted-card-generator-help.jpg \
	assisted-card-generator-helpnl_BE.gif \
	assisted-card-generator-helpnl_BE.pdf \
	assisted-card-generator-helpnl.gif \
	assisted-card-generator-helpnl_NL.gif \
	assisted-card-generator-helpnl_NL.pdf \
	assisted-card-generator-helpnl.pdf \
	assisted-card-generator-help.pdf \
	authentication-win.glade \
	auto-calib.glade \
	AutoDiagnosticFailed.img \
	ballot-option-selection-widget.glade \
	BallotOptionSeparateButtonWidget.glade \
	ballot-option-widget.glade \
	banner1024.gif \
	barcode_connected.gif \
	barcode_connected_small.gif \
	barcode-diagnosis-help.gif \
	barcode-diagnosis-help.pdf \
	barcode-diagnostic.glade \
	barcode-error-mp.gif \
	barcode-mp.gif \
	barcode_noConnected.gif \
	barcode_noConnected_small.gif \
	barcode-ok-mp.gif \
	barCodeReader.jpg \
	barcode_recoveryConnected.gif \
	both-memory-small.gif \
	brightness-diagnosis-help.gif \
	brightness-diagnosis-help.pdf \
	button-shut-down.png \
	Calendar.png \
	calibrate_brightness.glade \
	calibration_diagnosis.glade \
	calibration-diagnosis-help.gif \
	calibration-diagnosis-help.pdf \
	calibration_failure.glade \
	calibration.jpg \
	calibration_success.glade \
	card-activator.glade \
	card-generator-helpfr_BE.gif \
	card-generator-helpfr_BE.pdf \
	card-generator-helpfr_FR.gif \
	card-generator-helpfr_FR.pdf \
	card-generator-helpfr.gif \
	card-generator-helpfr.pdf \
	card-generator-help.gif \
	card-generator-help.jpg \
	card-generator-helpnl_BE.gif \
	card-generator-helpnl_BE.pdf \
	card-generator-helpnl.gif \
	card-generator-helpnl_NL.gif \
	card-generator-helpnl_NL.pdf \
	card-generator-helpnl.pdf \
	card-generator-help.pdf \
	CardTooManyExtracts.gif \
	cargando.gif \
	cargando-small.gif \
	change-hour.glade \
	change-hour-helpfr_BE.gif \
	change-hour-helpfr_FR.gif \
	change-hour-helpfr.gif \
	change-hour-help.gif \
	change-hour-helpnl_BE.gif \
	change-hour-helpnl.gif \
	change-hour-helpnl_NL.gif \
	change-hour-help.pdf \
	change-language-helpfr_BE.gif \
	change-language-helpfr_FR.gif \
	change-language-helpfr.gif \
	change-language-help.gif \
	change-language-helpnl_BE.gif \
	change-language-helpnl.gif \
	change-language-helpnl_NL.gif \
	change-language-help.pdf \
	check-directory-structure-failed.gif \
	check-directory-structure.gif \
	check-directory-structure_success.gif \
	check-file-presence-failed.gif \
	check-file-presence.gif \
	check-file-presence-success.gif \
	check-flash-presence-failed.gif \
	check-flash-presence.gif \
	check-flash-structure-failed.gif \
	check-flash-structure.gif \
	check-flash-structure-success.gif \
	check-memory-failed.gif \
	check-memory-full-failed.gif \
	check-memory-full.gif \
	check-memory.gif \
	check-memory-map-failed.gif \
	check-memory-map.gif \
	clock.png \
	close-election.gif \
	open-election.gif \
	close-election-helpfr_BE.gif \
	close-election-helpfr_BE.pdf \
	close-election-helpfr_FR.gif \
	close-election-helpfr_FR.pdf \
	close-election-helpfr.gif \
	close-election-helpfr.pdf \
	close-election-help.gif \
	close-election-helpnl_BE.gif \
	close-election-helpnl_BE.pdf \
	close-election-helpnl.gif \
	close-election-helpnl_NL.gif \
	close-election-helpnl_NL.pdf \
	close-election-helpnl.pdf \
	close-election-help.pdf \
	close-votation-helpfr_BE.gif \
	close-votation-helpfr_BE.pdf \
	close-votation-helpfr_FR.gif \
	close-votation-helpfr_FR.pdf \
	close-votation-helpfr.gif \
	close-votation-helpfr.pdf \
	close-votation-help.gif \
	close-votation-helpnl_BE.gif \
	close-votation-helpnl_BE.pdf \
	close-votation-helpnl.gif \
	close-votation-helpnl_NL.gif \
	close-votation-helpnl_NL.pdf \
	close-votation-helpnl.pdf \
	close-votation-help.pdf \
	contingency-card_error.gif \
	contingency-fatal-error.img \
	contingency-help.gif \
	contingency-pin.gif \
	contingency-printer-error.img \
	contingency-retry.png \
	contingency-shut-down.png \
	ContingencyWidget.glade \
	ContingencyCardGenWidget.glade \
	DeviceResultWidget.glade \
	diagnosis-help.gif \
	diagnosis-help.pdf \
	DiagnosticResultWidget.glade \
	end-voting-experience.img \
	Error_30.png \
	error-app.gif \
	extract_contingency_card.gif \
	fill-assisted-info-helpfr_BE.gif \
	fill-assisted-info-helpfr_BE.pdf \
	fill-assisted-info-helpfr_FR.gif \
	fill-assisted-info-helpfr_FR.pdf \
	fill-assisted-info-helpfr.gif \
	fill-assisted-info-helpfr.pdf \
	fill-assisted-info-help.gif \
	fill-assisted-info-helpnl_BE.gif \
	fill-assisted-info-helpnl_BE.pdf \
	fill-assisted-info-helpnl.gif \
	fill-assisted-info-helpnl_NL.gif \
	fill-assisted-info-helpnl_NL.pdf \
	fill-assisted-info-helpnl.pdf \
	fill-assisted-info-help.pdf \
	flash-diagnosis-help.gif \
	flash-diagnosis-help.pdf \
	Flash.png \
	generate-pv-report.gif \
	green-on-16.png \
	Hallstatt_Austria.jpg \
	HelpWidget.glade \
	MemoryStateWidget.glade \
	PMAuthenticationWidget.glade \
	VMAuthenticationWidget.glade \
	InterruptVotingWidget.glade \
	icon_smartcard.gif \
	icon_smartcard.jpg \
	id_card_widget_load.gif \
	id_card_widget_load_small.gif \
	image-not-found.gif \
	incident-report-helpfr_BE.gif \
	incident-report-helpfr_BE.pdf \
	incident-report-helpfr_FR.gif \
	incident-report-helpfr_FR.pdf \
	incident-report-helpfr.gif \
	incident-report-helpfr.pdf \
	incident-report-help.gif \
	incident-report-helpnl_BE.gif \
	incident-report-helpnl_BE.pdf \
	incident-report-helpnl.gif \
	incident-report-helpnl_NL.gif \
	incident-report-helpnl_NL.pdf \
	incident-report-helpnl.pdf \
	incident-report-help.pdf \
	IncorrectCardInsertion.gif \
	InfoMessageWidget.glade \
	installation-report-printing-progress-error.gif \
	installation-report-printing-progress.gif \
	InstallationWizardStep0.png \
	InstallationWizardStep1.png \
	InstallationWizardStep2.png \
	InstallationWizardStep3.png \
	InstallationWizardStep4.png \
	InstallationWizardStep5.png \
	InstallationWizardStep6.png \
	InstallationWizardStep7.png \
	InstallationWizardStep8.png \
	InstallationWizardStep9.png \
	Interrogation_30.png \
	InterruptExtractVoterCard.gif \
	invalid-memory-inserted.gif \
	loading.gif \
	log-initial-image.png \
	LoginWidget.glade \
	log-print-error.png \
	log-printing.gif \
	log-print-ok.png \
	log-report-helpfr_BE.gif \
	log-report-helpfr_FR.gif \
	log-report-helpfr.gif \
	log-report-help.gif \
	log-report-helpnl_BE.gif \
	log-report-helpnl.gif \
	log-report-helpnl_NL.gif \
	log-report-help.pdf \
	memory-extracted.gif \
	notapplicable.png \
	NotDemonstrationVote.gif \
	Ok_30.png \
	one-memory-extracted-allow.gif \
	one-memory-extracted.gif \
	one-memory-small.gif \
	open-election-helpfr_BE.gif \
	open-election-helpfr_BE.pdf \
	open-election-helpfr_FR.gif \
	open-election-helpfr_FR.pdf \
	open-election-helpfr.gif \
	open-election-helpfr.pdf \
	open-election-help.gif \
	open-election-helpnl_BE.gif \
	open-election-helpnl_BE.pdf \
	open-election-helpnl.gif \
	open-election-helpnl_NL.gif \
	open-election-helpnl_NL.pdf \
	open-election-helpnl.pdf \
	open-election-help.pdf \
	PagingTreeViewWidget.glade \
	pantalla-iniciacion.jpg \
	pendrive.png \
	persist-all-result-files.gif \
	persist-codi-files.gif \
	persist-package.gif \
	PM_Back.gif \
	PM_Go.gif \
	PM_login.gif \
	PM_OK.gif \
	PM_pass.gif \
	PM_passOK.gif \
	PM_passWrong.gif \
	PM_Print.gif \
	pollworker-register-helpfr_BE.gif \
	pollworker-register-helpfr_BE.pdf \
	pollworker-register-helpfr_FR.gif \
	pollworker-register-helpfr_FR.pdf \
	pollworker-register-helpfr.gif \
	pollworker-register-helpfr.pdf \
	pollworker-register-help.gif \
	pollworker-register-helpnl_BE.gif \
	pollworker-register-helpnl_BE.pdf \
	pollworker-register-helpnl.gif \
	pollworker-register-helpnl_NL.gif \
	pollworker-register-helpnl_NL.pdf \
	pollworker-register-helpnl.pdf \
	pollworker-register-help.pdf \
	preview-in-waiting-widget.glade \
	printer-diagnosis-help.gif \
	printer-diagnosis-help.pdf \
	printer-diagnostic.glade \
	printer-error.img \
	printer-error-mp.img \
	printer.gif \
	printer.img \
	printer-mp.gif \
	printer-ok.img \
	printer-ok-mp.img \
	printer-test-logo-mp.bmp \
	printer-test-logo-mp-to-print.bmp \
	printer-test-logo-mv.bmp \
	printer-test-logo-mv-to-print.bmp \
	printer_voting_error.img \
	printing-contingency-report.gif \
	print-preview-help.gif \
	print-preview-help.pdf \
	print-pv-report.gif \
	ProgressWidget.glade \
	recovery_bad.png \
	recovery-card-activator.glade \
	recovery-card-generator-helpfr_BE.gif \
	recovery-card-generator-helpfr_BE.pdf \
	recovery-card-generator-helpfr_FR.gif \
	recovery-card-generator-helpfr_FR.pdf \
	recovery-card-generator-helpfr.gif \
	recovery-card-generator-helpfr.pdf \
	recovery-card-generator-help.gif \
	recovery-card-generator-help.jpg \
	recovery-card-generator-helpnl_BE.gif \
	recovery-card-generator-helpnl_BE.pdf \
	recovery-card-generator-helpnl.gif \
	recovery-card-generator-helpnl_NL.gif \
	recovery-card-generator-helpnl_NL.pdf \
	recovery-card-generator-helpnl.pdf \
	recovery-card-generator-help.pdf \
	recoverycardimage.gif \
	recovery_good.png \
	recovery_none.png \
	red-on-16.png \
	register-president-notes-helpfr_BE.gif \
	register-president-notes-helpfr_BE.pdf \
	register-president-notes-helpfr_FR.gif \
	register-president-notes-helpfr_FR.pdf \
	register-president-notes-helpfr.gif \
	register-president-notes-helpfr.pdf \
	register-president-notes-help.gif \
	register-president-notes-helpnl_BE.gif \
	register-president-notes-helpnl_BE.pdf \
	register-president-notes-helpnl.gif \
	register-president-notes-helpnl_NL.gif \
	register-president-notes-helpnl_NL.pdf \
	register-president-notes-helpnl.pdf \
	register-president-notes-help.pdf \
	RemoveTheCard.gif \
	replace-machine-mode-error.gif \
	replace-machine-mode-success.gif \
	ReportLogWidget.glade \
	report-printing-helpfr_BE.gif \
	report-printing-helpfr_FR.gif \
	report-printing-helpfr.gif \
	report-printing-help.gif \
	report-printing-helpnl_BE.gif \
	report-printing-helpnl.gif \
	report-printing-helpnl_NL.gif \
	report-printing-help.pdf \
	ReportPrintingWidget.glade \
	request_contingency_card.gif \
	ResultWidget.glade \
	RPW_error.img \
	RPW_inactive.img \
	RPW_ok.img \
	RPW_printing.img \
	sc-reader-diagnosis-help.gif \
	sc-reader-diagnosis-help.pdf \
	screen-generation.png \
	selected.png \
	show_brightness.glade \
	shut-down.png \
	sign-package.gif \
	smartcard_activation.gif \
	smartcard.gif \
	smartcard-mp.gif \
	smartcard-recovery-extract.gif \
	smartcard-recovery-insert.gif \
	statistics-report-helpfr_BE.gif \
	statistics-report-helpfr_BE.pdf \
	statistics-report-helpfr_FR.gif \
	statistics-report-helpfr_FR.pdf \
	statistics-report-helpfr.gif \
	statistics-report-helpfr.pdf \
	statistics-report-help.gif \
	statistics-report-helpnl_BE.gif \
	statistics-report-helpnl_BE.pdf \
	statistics-report-helpnl.gif \
	statistics-report-helpnl_NL.gif \
	statistics-report-helpnl_NL.pdf \
	statistics-report-helpnl.pdf \
	statistics-report-help.pdf \
	step_no_execute_30.png \
	step_ready_30.png \
	time-out-end-voting-experience.img \
	unselected.png \
	VMbarcode_reader_configuration.pdf \
	vm_installation_confirmation.glade \
	vote-consolidation-functionality.glade \
	vote-consolidation-helpfr_BE.gif \
	vote-consolidation-helpfr_BE.pdf \
	vote-consolidation-helpfr_FR.gif \
	vote-consolidation-helpfr_FR.pdf \
	vote-consolidation-helpfr.gif \
	vote-consolidation-helpfr.pdf \
	vote-consolidation-help.gif \
	vote-consolidation-help.jpg \
	vote-consolidation-helpnl_BE.gif \
	vote-consolidation-helpnl_BE.pdf \
	vote-consolidation-helpnl.gif \
	vote-consolidation-helpnl_NL.gif \
	vote-consolidation-helpnl_NL.pdf \
	vote-consolidation-helpnl.pdf \
	vote-consolidation-help.pdf \
	vote-preview-functionality.glade \
	vote-process-demo.glade \
	vote-process-demo-helpfr_BE.gif \
	vote-process-demo-helpfr_BE.pdf \
	vote-process-demo-helpfr_FR.gif \
	vote-process-demo-helpfr_FR.pdf \
	vote-process-demo-helpfr.gif \
	vote-process-demo-helpfr.pdf \
	vote-process-demo-help.gif \
	vote-process-demo-helpnl_BE.gif \
	vote-process-demo-helpnl_BE.pdf \
	vote-process-demo-helpnl.gif \
	vote-process-demo-helpnl_NL.gif \
	vote-process-demo-helpnl_NL.pdf \
	vote-process-demo-helpnl.pdf \
	vote-process-demo-help.pdf \
	voting-experience-finalization-image.gif \
	voting-experience-validation.glade \
	voting-experience-validation-help.gif \
	voting-experience-validation-help.pdf \
	voting-machine-installation-helpfr_BE.gif \
	voting-machine-installation-helpfr_BE.pdf \
	voting-machine-installation-helpfr_FR.gif \
	voting-machine-installation-helpfr_FR.pdf \
	voting-machine-installation-helpfr.gif \
	voting-machine-installation-helpfr.pdf \
	voting-machine-installation-help.gif \
	voting-machine-installation-helpnl_BE.gif \
	voting-machine-installation-helpnl_BE.pdf \
	voting-machine-installation-helpnl.gif \
	voting-machine-installation-helpnl_NL.gif \
	voting-machine-installation-helpnl_NL.pdf \
	voting-machine-installation-helpnl.pdf \
	voting-machine-installation-help.pdf \
	WaitingForCardWidget.glade \
	ErrorInfoVotingCardData.gif \
	waitingForVoterCard.gif \
	waitingForVoterCardOrVoteScan.gif \
	waitingForVoterCardScannerNotFound.gif \
	waitingForVoterReconfigureBarcode.gif \
	wizard-election-closed-helpfr_BE.gif \
	wizard-election-closed-helpfr_BE.pdf \
	wizard-election-closed-helpfr_FR.gif \
	wizard-election-closed-helpfr_FR.pdf \
	wizard-election-closed-helpfr.gif \
	wizard-election-closed-helpfr.pdf \
	wizard-election-closed-help.gif \
	wizard-ElectionClosed-help-image-help.jpg \
	wizard-election-closed-helpnl_BE.gif \
	wizard-election-closed-helpnl_BE.pdf \
	wizard-election-closed-helpnl.gif \
	wizard-election-closed-helpnl_NL.gif \
	wizard-election-closed-helpnl_NL.pdf \
	wizard-election-closed-helpnl.pdf \
	wizard-election-closed-help.pdf \
	wizard-ElectionClosed-help-pdf-help.pdf \
	wizard-initiated-helpfr_BE.gif \
	wizard-initiated-helpfr_BE.pdf \
	wizard-initiated-helpfr_FR.gif \
	wizard-initiated-helpfr_FR.pdf \
	wizard-initiated-helpfr.gif \
	wizard-initiated-helpfr.pdf \
	wizard-initiated-help.gif \
	wizard-Initiated-help-image-help.jpg \
	wizard-initiated-helpnl_BE.gif \
	wizard-initiated-helpnl_BE.pdf \
	wizard-initiated-helpnl.gif \
	wizard-initiated-helpnl_NL.gif \
	wizard-initiated-helpnl_NL.pdf \
	wizard-initiated-helpnl.pdf \
	wizard-initiated-help.pdf \
	wizard-Initiated-help-pdf-help.pdf \
	wizard-NoDemoVote-help-image-help.jpg \
	wizard-NoDemoVote-help-pdf-help.pdf \
	wizard-NoInitiated-help-image-help.jpg \
	wizard-NoInitiated-help-pdf-help.pdf \
	wizard-no-installed-help-image-help.jpg \
	wizard-no-installed-help-pdf-help.pdf \
	wizard-NoPollworkerRegistered-help-image-help.jpg \
	wizard-NoPollworkerRegistered-help-pdf-help.pdf \
	wizard-not-demonstration-vote-helpfr_BE.gif \
	wizard-not-demonstration-vote-helpfr_BE.pdf \
	wizard-not-demonstration-vote-helpfr_FR.gif \
	wizard-not-demonstration-vote-helpfr_FR.pdf \
	wizard-not-demonstration-vote-helpfr.gif \
	wizard-not-demonstration-vote-helpfr.pdf \
	wizard-not-demonstration-vote-help.gif \
	wizard-not-demonstration-vote-helpnl_BE.gif \
	wizard-not-demonstration-vote-helpnl_BE.pdf \
	wizard-not-demonstration-vote-helpnl.gif \
	wizard-not-demonstration-vote-helpnl_NL.gif \
	wizard-not-demonstration-vote-helpnl_NL.pdf \
	wizard-not-demonstration-vote-helpnl.pdf \
	wizard-not-demonstration-vote-help.pdf \
	wizard-not-initiated-helpfr_BE.gif \
	wizard-not-initiated-helpfr_BE.pdf \
	wizard-not-initiated-helpfr_FR.gif \
	wizard-not-initiated-helpfr_FR.pdf \
	wizard-not-initiated-helpfr.gif \
	wizard-not-initiated-helpfr.pdf \
	wizard-not-initiated-help.gif \
	wizard-not-initiated-helpnl_BE.gif \
	wizard-not-initiated-helpnl_BE.pdf \
	wizard-not-initiated-helpnl.gif \
	wizard-not-initiated-helpnl_NL.gif \
	wizard-not-initiated-helpnl_NL.pdf \
	wizard-not-initiated-helpnl.pdf \
	wizard-not-initiated-help.pdf \
	wizard-not-installed-helpfr_BE.gif \
	wizard-not-installed-helpfr_BE.pdf \
	wizard-not-installed-helpfr_FR.gif \
	wizard-not-installed-helpfr_FR.pdf \
	wizard-not-installed-helpfr.gif \
	wizard-not-installed-helpfr.pdf \
	wizard-not-installed-help.gif \
	wizard-not-installed-helpnl_BE.gif \
	wizard-not-installed-helpnl_BE.pdf \
	wizard-not-installed-helpnl.gif \
	wizard-not-installed-helpnl_NL.gif \
	wizard-not-installed-helpnl_NL.pdf \
	wizard-not-installed-helpnl.pdf \
	wizard-not-installed-help.pdf \
	wizard-not-pollworker-registered-helpfr_BE.gif \
	wizard-not-pollworker-registered-helpfr_BE.pdf \
	wizard-not-pollworker-registered-helpfr_FR.gif \
	wizard-not-pollworker-registered-helpfr_FR.pdf \
	wizard-not-pollworker-registered-helpfr.gif \
	wizard-not-pollworker-registered-helpfr.pdf \
	wizard-not-pollworker-registered-help.gif \
	wizard-not-pollworker-registered-helpnl_BE.gif \
	wizard-not-pollworker-registered-helpnl_BE.pdf \
	wizard-not-pollworker-registered-helpnl.gif \
	wizard-not-pollworker-registered-helpnl_NL.gif \
	wizard-not-pollworker-registered-helpnl_NL.pdf \
	wizard-not-pollworker-registered-helpnl.pdf \
	wizard-not-pollworker-registered-help.pdf \
	wizard-voting-closed-helpfr_BE.gif \
	wizard-voting-closed-helpfr_BE.pdf \
	wizard-voting-closed-helpfr_FR.gif \
	wizard-voting-closed-helpfr_FR.pdf \
	wizard-voting-closed-helpfr.gif \
	wizard-voting-closed-helpfr.pdf \
	wizard-voting-closed-help.gif \
	wizard-VotingClosed-help-image-help.jpg \
	wizard-voting-closed-helpnl_BE.gif \
	wizard-voting-closed-helpnl_BE.pdf \
	wizard-voting-closed-helpnl.gif \
	wizard-voting-closed-helpnl_NL.gif \
	wizard-voting-closed-helpnl_NL.pdf \
	wizard-voting-closed-helpnl.pdf \
	wizard-voting-closed-help.pdf \
	wizard-VotingClosed-help-pdf-help.pdf \
	wiz_extract_identity_card.gif \
	wiz_extract_identity_card_error.gif \
	wiz_extract_media.gif \
	wiz_finalize.gif \
	wiz_install_media.gif \
	wiz_request_identity_card.gif \
	wiz_umount_device.gif \
	wiz_write_identity_card.gif \
	writing-contingency-card.gif \
	WrongCard.gif \
	BEIDWrongCard.gif \
	ForceEndVoting.gif \
	VotingExperienceValidationWidget.glade \
	VotingForDisabledQuestionWidget.glade \
	VotingForDisabledInfoWidget.glade \
	VotingForDisabledIDInfoWidget.glade \
	screen-error.png \
	screen-ok.png \
	DiagnosisBlockedWidget.glade \
	auto-diagnosis-devices-mp.gif \
	auto-diagnosis-devices-mv.gif \
	report-printing-help.pdf \
	report-printing-helpfr.pdf \
	report-printing-helpfr_BE.pdf \
	report-printing-helpfr_FR.pdf \
	report-printing-helpnl.pdf \
	report-printing-helpnl_BE.pdf \
	result-error.png \
	result-ok.png

EXTRA_DIST = $(ui_DATA)


