## Process this file with automake to produce Makefile.in

## Created by Anjuta

uidir = @UIDATADIR@
ui_DATA = \
	base_window.glade\
	banner1024.gif \
	exit.jpg \
	help.jpg \
	0_60x60.png \
	1_60x60.png \
	2_60x60.png \
	3_60x60.png \
	4_60x60.png \
	5_60x60.png \
	6_60x60.png \
	7_60x60.png \
	8_60x60.png \
	9_60x60.png \
	branco_02_60px.png \
	confirma_60.png \
	corrige_02_60px.png \
	keypad.glade\
	0_30x30.png \
	1_30x30.png \
	2_30x30.png \
	3_30x30.png \
	4_30x30.png \
	5_30x30.png \
	6_30x30.png \
	7_30x30.png \
	8_30x30.png \
	9_30x30.png \
	pollbook.jpg \
	votingmachine.jpg \
	Maintenance.png \
	vm_installation.glade \
	vm_installation_confirmation.glade \
	key-board.glade \
	ArrowLeft.png \
	ArrowLeft_30.png \
	ArrowRight.png \
	ArrowRight_30.png \
	ArrowBottom.png \
	ArrowBottom_30.png \
	ArrowTop.png \
	ArrowTop_30.png \
	banner_with_button.gif \
	banner_without_button.gif \
	banner_687_85.png \
	banner_760_85.png \
	banner_951_85.png \
	banner_1024_85.png \
	banner_614_85.png \
	banner_878_85.png \
	BasicWindow.glade \
	password-window.gif \
	image-not-found.gif \
	ReportingProcess.jpg \
	waiting_token_card.gif \
	cargando.gif \
	9_60x60.png \
	InstallMachineToolbar.gif \
	MenuInToolbar.gif \
	RegPollworkerToolbar.gif \
	SecurityCopyToolbar.gif \
	StatisticsToolbar.gif \
	TechIncidentReportToolbar.gif \
	VotingExperienceDemoToolbar.gif \
	NotInstalledTimeline.png \
	NotPollworkerRegisteredTimeline.png \
	NoDemoVoteTimeline.png \
	NoInitiatedTimeline.png \
	InitiatedTimeline.png \
	VotingClosedTimeline.png \
	ElectionClosedTimeline.png \
	AssistedActivationToolbar.gif \
	ExpertNotesToolbar.gif \
	RePrintPVToolbar.gif \
	ViewLogToolbar.gif \
	VotePrintPreviewToolbar.jpg \
	btn_cancel.gif \
	btn_ok.png \
	VotingForDisabledToolbar.gif \
	RegisterInfoWidget.glade \
	PoliceNotesToolbar.gif

EXTRA_DIST = $(ui_DATA)

